addons/knowledge/static/src/scss/knowledge_frontend.scss
.o_knowledge_form_view {
    // Header
    // --------------------------------------------------------------------------
    .o_knowledge_header {
        cursor: default;
    }

    .o_favorites_toggle_button {
        i.fa-star, i:hover {
            color: #f3cc00;
        }
        font-size: 16px;
        cursor: pointer;
    }

    .o_view_nocontent_empty_folder:before {
        @extend %o-nocontent-empty-document;
    }

    // Body, cover and icon
    // --------------------------------------------------------------------------
    .o_knowledge_icon:not(.o_full_width),
    .o_knowledge_article:not(.o_full_width) {
        width: 750px;
        max-width: 100%;
        margin-left: auto;
        margin-right: auto;
    }

    .o_knowledge_cover_image {
        width: 100%;
        img {
            width: 100%;
            height: 30vh;
            min-height: 150px;
            object-fit: cover;
            object-position: 50% 50%;
        }
    }
    .o_knowledge_cover_image + .o_knowledge_icon {
        margin-top: -70px;
    }
    .o_knowledge_icon {
        font-size: 80px;
    }

    // Sidebar
    // --------------------------------------------------------------------------
    .o_knowledge_aside {
        width: var(--sidebar-size);
        transition: width 0.15s linear;

        li {
            padding: 0.2em 0;
            position: relative;
        }

        ul {
            list-style: none;
            padding: 0;
        }

        li > ul > li:not(.ui-sortable-helper) {
            margin-left: 1.28571429em * 0.5; // Workaround to get half .fa-fw icon's width.
            padding-left: 0.8em;

            &:before, &:after {
                content: '';
                background-color: $border-color;
            }

            &:before {
                @include o-position-absolute($top: 1em, $left: 0);
                width: .6em;
                height: 1px;
                margin: auto;
            }

            &:after {
                @include o-position-absolute(0, auto, 0, 0);
                width: 1px;
                height: 100%;
            }

            &:last-child {
                padding-bottom: 0;

                &:after {
                    height: 1em;
                }
            }
        }

        .o_article_name a {
            cursor: pointer;
            color: inherit;
            text-decoration: none;
        }
    }
}

@include media-breakpoint-up(sm) {
    .o_knowledge_form_view {
        .o_scroll_view {
            position: absolute;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            overflow-y: auto;
            overflow-x: hidden;
        }
    }
}

